--- a/src/components/ProductCard/ProductCard.module.css
+++ b/src/components/ProductCard/ProductCard.module.css
@@ -6,6 +6,7 @@
   box-shadow: 0 0 5px grey;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   gap: 1rem;
   margin: 1rem;
   padding: 2rem 1rem 1rem;
@@ -34,11 +35,39 @@
   align-items: center;
 }
 
-.button__container button {
+.add__button {
   padding: 0.5rem 1rem;
   margin-bottom: 1rem;
+  border-radius: 0.5rem;
+  border: none;
+  background-color: rgb(12, 202, 12);
+  box-shadow: 0 0 5px grey;
 }
 
-.button__container button:hover {
+.add__button:hover {
   cursor: pointer;
+  background-color: hsl(120, 89%, 22%);
+  color: white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  transform: translateY(-2px);
+  border-radius: 0.5rem;
+}
+
+.remove__button {
+  padding: 0.5rem 1rem;
+  margin-bottom: 1rem;
+  border-radius: 0.5rem;
+  border: none;
+  background-color: #ff4136;
+  box-shadow: 0 0 5px grey;
+  color: white;
+}
+
+.remove__button:hover {
+  cursor: pointer;
+  background-color: hsl(3, 100%, 41%);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  transform: translateY(-2px);
+  border-radius: 0.5rem;
+  color: white;
 }
