--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -10,6 +10,7 @@
 
 .product__card__container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
-  padding: 0;
+  grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
+  place-content: center;
+  justify-items: center;
 }
