--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -5,6 +5,7 @@
   display: flex;
   justify-content: space-between;
   align-items: end;
+  font-size: clamp(0.5rem, 0.5rem + 1vw, 1rem);
 }
 
 .navbar__store {
@@ -13,13 +14,17 @@
   font-size: 2rem;
 }
 
+.navbar__store h1 {
+  font-size: clamp(1rem, 1rem + 5vw, 3rem);
+}
+
 .navbar__links__container {
   background-color: inherit;
 }
 
 .navbar__links__container ul {
   display: flex;
-  gap: 1rem;
+  gap: clamp(.5rem, .5rem + 1vw, 1rem);
 }
 
 .navbar__links__container > * {
@@ -35,7 +40,10 @@
 
 .home__button,
 .cart__button {
-  padding: 0.5rem 1rem;
+  padding-left: clamp(0.5rem, 0.5rem + 1vw, 1rem);
+  padding-right: clamp(0.5rem, 0.5rem + 1vw, 1rem);
+  padding-top: clamp(.25rem, .25rem + 1vw, .5rem);
+  padding-bottom: clamp(0.25rem, 0.25rem + 1vw, .5rem);
   background-color: #000080;
   color: rgb(222, 222, 222);
   border: none;
