--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -6,6 +6,7 @@
   justify-content: space-between;
   align-items: end;
   font-size: clamp(0.5rem, 0.5rem + 1vw, 1rem);
+  box-sizing: border-box;
 }
 
 .navbar__store {
@@ -20,11 +21,14 @@
 
 .navbar__links__container {
   background-color: inherit;
+  margin: 0;
+  padding: 0;
 }
 
 .navbar__links__container ul {
   display: flex;
   gap: clamp(.5rem, .5rem + 1vw, 1rem);
+  overflow: hidden;
 }
 
 .navbar__links__container > * {
@@ -43,7 +47,7 @@
   padding-left: clamp(0.5rem, 0.5rem + 1vw, 1rem);
   padding-right: clamp(0.5rem, 0.5rem + 1vw, 1rem);
   padding-top: clamp(.25rem, .25rem + 1vw, .5rem);
-  padding-bottom: clamp(0.25rem, 0.25rem + 1vw, .5rem);
+  padding-bottom: clamp(0.5rem, 0.5rem + 1vw, .5rem);
   background-color: #000080;
   color: rgb(222, 222, 222);
   border: none;
@@ -54,6 +58,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  line-height: 1;
+  vertical-align: middle;
 }
 
 .cart__button {
