--- a/src/components/ProductCard/ProductCard.module.css
+++ b/src/components/ProductCard/ProductCard.module.css
@@ -1,9 +1,9 @@
 .card__container {
   max-width: 20rem;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   border: none;
   border-radius: 1rem;
-  box-shadow: 0 0 10px #36454F;
+  box-shadow: 0 0 10px #36454f;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -16,10 +16,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  max-height: 10rem;
+  overflow: hidden;
 }
 
 .image__container img {
-  max-width: 10rem;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .details__container {
@@ -72,7 +75,19 @@
   color: white;
 }
 
-
 .product__description {
   word-wrap: break-word;
+  font-size: 0.75rem;
+  overflow: hidden;
+  display: -webkit-box;
+  --webkit-line-clamp: 3;
+  --webkit-box-orient: vertical;
+  display: flex;
+  flex-direction: column;
+}
+
+.see__more {
+  color: blue;
+  cursor: pointer;
+  font-weight: bold;
 }
