--- a/src/components/ProductCard/ProductCard.module.css
+++ b/src/components/ProductCard/ProductCard.module.css
@@ -34,13 +34,24 @@
 
 .button__container {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  padding: 0rem 1rem;
+}
+
+.quantity__container {
+  display: flex;
+}
+
+.quantity__label {
+}
+
+.quantity__input {
+  max-width: 3rem;
 }
 
 .add__button {
   padding: 0.5rem 1rem;
-  margin-bottom: 1rem;
   border-radius: 0.5rem;
   border: none;
   background-color: rgb(12, 202, 12);
@@ -58,10 +69,9 @@
 
 .remove__button {
   padding: 0.5rem 1rem;
-  margin-bottom: 1rem;
   border-radius: 0.5rem;
   border: none;
-  background-color: #ff4136;
+  background-color: dodgerblue;
   box-shadow: 0 0 5px grey;
   color: white;
 }
