Update styling on cartcard

--- a/src/components/CartCard/CartCard.module.css
+++ b/src/components/CartCard/CartCard.module.css
@@ -1,81 +1,105 @@
 .card__container {
-    max-width: 20rem;
-    background-color: white;
-    border: none;
-    border-radius: 1rem;
-    box-shadow: 0 0 5px grey;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    margin: 1rem;
-    padding: 2rem 1rem 1rem;
-  }
-  
-  .image__container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .image__container img {
-    max-width: 10rem;
-  }
-  
-  .details__container {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-    padding: 1rem;
-  }
-  
-  .button__container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .button__container button {
-    padding: 0.5rem 1rem;
-    margin-bottom: 1rem;
-  }
-  
-  .button__container button:hover {
-    cursor: pointer;
-  }
-  
-  .add__button {
-    padding: 0.5rem 1rem;
-    margin-bottom: 1rem;
-    border-radius: 0.5rem;
-    border: none;
-    background-color: rgb(12, 202, 12);
-    box-shadow: 0 0 5px grey;
-  }
-  
-  .add__button:hover {
-    cursor: pointer;
-    background-color: hsl(120, 89%, 22%);
-    color: white;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    transform: translateY(-2px);
-    border-radius: 0.5rem;
-  }
-  
-  .remove__button {
-    padding: 0.5rem 1rem;
-    margin-bottom: 1rem;
-    border-radius: 0.5rem;
-    border: none;
-    background-color: #ff4136;
-    box-shadow: 0 0 5px grey;
-    color: white;
-  }
-  
-  .remove__button:hover {
-    cursor: pointer;
-    background-color: hsl(3, 100%, 41%);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    transform: translateY(-2px);
-    border-radius: 0.5rem;
-    color: white;
-  }
+  max-width: 20rem;
+  background-color: white;
+  border: none;
+  border-radius: 1rem;
+  box-shadow: 0 0 5px grey;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin: 1rem;
+  padding: 2rem 1rem 1rem;
+}
+
+.image__container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.image__container img {
+  max-width: 10rem;
+}
+
+.details__container {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  padding: 1rem;
+}
+
+.button__container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.quantity__container {
+  display: flex;
+  padding: 1rem;
+}
+
+.quantity__input {
+  max-width: 3rem;
+}
+
+.button__container button {
+  padding: 0.5rem 1rem;
+}
+
+.button__container button:hover {
+  cursor: pointer;
+}
+
+.add__button {
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  border: none;
+  background-color: rgb(12, 202, 12);
+  box-shadow: 0 0 5px grey;
+}
+
+.add__button:hover {
+  cursor: pointer;
+  background-color: hsl(120, 89%, 22%);
+  color: white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  transform: translateY(-2px);
+  border-radius: 0.5rem;
+}
+
+.update__button {
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  border: none;
+  background-color: dodgerblue;
+  box-shadow: 0 0 5px grey;
+  color: white;
+}
+
+.update__button:hover {
+  cursor: pointer;
+  background-color: hsl(3, 100%, 41%);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  transform: translateY(-2px);
+  border-radius: 0.5rem;
+  color: white;
+}
+
+.remove__button {
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  border: none;
+  background-color: hsl(3, 100%, 51%);
+  box-shadow: 0 0 5px grey;
+  color: white;
+}
+
+.remove__button:hover {
+  cursor: pointer;
+  background-color: hsl(3, 100%, 41%);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  transform: translateY(-2px);
+  border-radius: 0.5rem;
+  color: white;
+}
