--- a/src/components/CartCalculations/CartCalculations.module.css
+++ b/src/components/CartCalculations/CartCalculations.module.css
@@ -8,3 +8,25 @@
   margin: 0;
   padding: 0;
 }
+
+.calculations__table {
+  background-color: hsl(207, 37%, 81%);
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  color: black;
+}
+
+.items__total,
+.tax,
+.shipping__and__handling,
+.grand__total {
+  display: flex;
+  justify-content: space-between;
+}
+
+.grand__total {
+  font-weight: bold;
+  font-size: 1.25rem;
+  padding-top: 1rem;
+}
