--- a/src/components/CartCard/CartCard.module.css
+++ b/src/components/CartCard/CartCard.module.css
@@ -1,11 +1,12 @@
 .card__container {
   max-width: 20rem;
-  background-color: white;
+  background-color: #ffffff;
   border: none;
   border-radius: 1rem;
-  box-shadow: 0 0 5px grey;
+  box-shadow: 0 0 10px #36454f;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   gap: 1rem;
   margin: 1rem;
   padding: 2rem 1rem 1rem;
@@ -15,10 +16,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  max-height: 10rem;
+  overflow: hidden;
 }
 
 .image__container img {
-  max-width: 10rem;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .details__container {
